# imap2gmail

./: .gitignore  README.md  gmailclient.py  gmailimapimporter.py  imap.py  imap2gmail.py  imap2gmailprocessor.py  imapreader.py  imaptraverser.py  license.md  pyproject.toml  requirements.txt  setup.cfg  snapcraft.yaml
imap2gmail/: gmailimapimporter.py  imap2gmail.py  imap2gmailprocessor.py
snap/: snapcraft.yaml
snapcraft/: snapcraft.yaml
src/imap2gmail/: gmailimapimporter.py  imap2gmail.py  imap2gmailprocessor.py  imapreader.py
