[metadata]
name = imap2gmail
version = 0.0.1

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    imapclient
    google_auth_httplib2
    google_auth_oauthlib
    google-api-python-client
    ratelimit
    requests

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    imap2gmail = imap2gmail.imap2gmail:imap2gmail
